src/test/deca/syntax/valid/final_is_identifier.deca
// Description :
// Utilisation de final comme identifier
//
// Resultats :
// ok

{
    int final;
    final = 1;
    println(final);
}