src/test/deca/syntax/invalid/custom/invalid_while.deca
// Resultats :
// Erreur contextuelle
// Ligne 2 : expression de condition manquante

while () {
    int x = 0;
}
